# Desarrollo-de-proyectos-AIoT

./: .gitignore  README.md
Results/model_results/: model_CNNA_MFCC_results.csv  model_CNN_MFCC_results.csv  model_CNN_float_results.csv  model_CNN_int_results.csv  model_NN_float_results.csv  model_NN_int_results.csv
V_MFCC/main/: CMakeLists.txt  app_audio.cpp  app_audio.hpp  app_mem.hpp  app_mqtt.hpp  idf_component.yml  main.cpp  model.cpp
V_float/: CMakeLists.txt
V_float/main/: app_audio.cpp  app_audio.hpp  app_mem.cpp  idf_component.yml  main.cpp
V_int8/: partitions.csv  sdkconfig.defaults
V_int8/main/: CMakeLists.txt  app_audio.cpp  app_audio.hpp  app_mqtt.cpp  main.cpp  model.cpp  model.hpp
general_notebooks/: audio_processing.ipynb  model_compression.ipynb  model_test.ipynb  model_training.ipynb
models/compressed_MFCC/: model_CNN.tflite  model_CNNA.tflite
models/compressed_float32/: model_CNN.tflite  model_CNNA.tflite  model_NN.tflite  model_NN1.tflite  model_NNA.tflite
models/compressed_int8/: model_CNN.tflite  model_CNNA.tflite  model_NN.tflite  model_NNA.tflite
models/not_compressed_MFCC/: model_CNN.h5  model_CNNA.h5
models/not_compressed_audio/: model_CNN.h5  model_CNN1.h5  model_CNNA.h5
testing/: audio_generator.ipynb  final_processing.ipynb  model_processing.ipynb  model_tests.ipynb
testing/audio_for_test/: audio_test_10min.csv
testing/data/: general_metrics.csv
testing/data/model_results/: model_CNNA_float_results.csv  model_CNNA_int_results.csv  model_NNA_float_results.csv  model_NNA_int_results.csv
